@@ -2264,6 +2264,7 @@ DRIVER(comet,l5)        //          06/85 W Comet (L-5)
 DRIVER(alcat,l7)        //S11-918:  ??/85 W Alley Cats (Shuffle)
 DRIVER(hs,l3)           //S11-541:  01/86 W High Speed (L-3)
 DRIVER(hs,l4)           //          01/86 W High Speed (L-4)
+DRIVER(hs,l4c)          //          04/18 W High Speed (L-4C Competition MOD)
 DRIVER(grand,l3)        //S11-523:  04/86 W Grand Lizard (L-3)
 DRIVER(grand,l4)        //          04/86 W Grand Lizard (L-4)
 DRIVER(rdkng,l1)        //S11-542:  07/86 W Road Kings (L-1)
@@ -2371,6 +2372,7 @@ DRIVER(pool,le2)        //          03/90?B Pool Sharks (LE-2) Europe
 DRIVER(pool,l5)         //          05/90 B Pool Sharks (LA-5)
 DRIVER(pool,l6)         //          05/90 B Pool Sharks (LA-6)
 DRIVER(pool,l7)         //          01/91 B Pool Sharks (LA-7)
+DRIVER(pool,l7c)        //          04/18 B Pool Sharks (LA-7C Competition MOD)
 DRIVER(diner,l1)        //S11-571:  06/90 W Diner (LU-1)
 DRIVER(diner,l2)        //          06/90 W Diner (LU-2)
 DRIVER(diner,l3)        //          06/90 W Diner (LA-3)
